Bug 100153 - FILEOPEN: DOCX import noSmoking shape incorrectly
Summary: FILEOPEN: DOCX import noSmoking shape incorrectly
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.5.2 release
Hardware: All All
: medium normal
Assignee: Zhengqiang Wang
URL:
Whiteboard: target:5.3.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-05-31 05:56 UTC by Zhengqiang Wang
Modified: 2016-08-05 03:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
This document is exported by M$Word 2010 (15.78 KB, application/wps-office.docx)
2016-05-31 05:56 UTC, Zhengqiang Wang
Details
screen print from shape in LibreOffice 3.3.0 (13.73 KB, image/png)
2016-05-31 08:12 UTC, Cor Nouws
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zhengqiang Wang 2016-05-31 05:56:16 UTC
Created attachment 125406 [details]
This document is exported by M$Word 2010

LibreOffice Writer fails to correctly import a noSmoking shape from DOCX document

Steps to reproduce:
- Open the attached reduced test case with LibreOffice Writer.
Comment 1 Zhengqiang Wang 2016-05-31 06:01:02 UTC
There are wrong template about noSmoking in file oox-drawingml-cs-presets
Comment 2 Cor Nouws 2016-05-31 08:12:52 UTC
Created attachment 125409 [details]
screen print from shape in LibreOffice 3.3.0

is this how it should show ?
Comment 3 Zhengqiang Wang 2016-06-14 08:37:59 UTC
(In reply to Cor Nouws from comment #2)
> Created attachment 125409 [details]
> screen print from shape in LibreOffice 3.3.0
> 
> is this how it should show ?

yes
Comment 4 Cor Nouws 2016-06-14 11:22:00 UTC
(In reply to Zhengqiang Wang from comment #3)

> yes

Thanks for confirming and for working on this issue!
Comment 5 Commit Notification 2016-06-23 10:07:47 UTC
Zhengqiang Wang committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=45909a8e7ec2c4ef366836ab6bf975a6c2fdd007

tdf#100153 modify noSmoking shape

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Luke 2016-08-02 19:29:38 UTC
Zhengqiang Wang,
Thank you. The OOXML import is working correctly now. 

Could you take a look at Bug 96052? The OOXML export is not working for this symbol. If you insert the 'Prohibited' into a LibreOffice document and save as an OOXML format, the line width is lost.
Comment 7 Zhengqiang Wang 2016-08-03 02:07:09 UTC
(In reply to Luke from comment #6)
> Zhengqiang Wang,
> Thank you. The OOXML import is working correctly now. 
> 
> Could you take a look at Bug 96052? The OOXML export is not working for this
> symbol. If you insert the 'Prohibited' into a LibreOffice document and save
> as an OOXML format, the line width is lost.

I don't think the line width is lost, maybe the line is too thick and the ring is too thin.

Many Shapes have export problem, also noSmoking shape. The reason is same, maybe you can take a look this :
https://cgit.freedesktop.org/libreoffice/core/commit/?id=b1751e6ed0fd6d6d26141e4405df92520e3c04cd
Comment 8 Luke 2016-08-05 02:41:05 UTC
Zhengqiang,
Do you want to close this issue as FIXED? Your import fix seems to work very well.
Comment 9 Zhengqiang Wang 2016-08-05 03:01:39 UTC
(In reply to Luke from comment #8)
> Zhengqiang,
> Do you want to close this issue as FIXED? Your import fix seems to work very
> well.

Yes, I do.