tdf#100153 modify noSmoking shape

*modify customshapeproperties.cxx
 fix compile error : make oox dbglevel=2
 The define of dumpCode() has been removed by c714b43b0137ad253f51e1c65417c9874b8509e5
*modify presetShapeDefinitions.xml
 fix noSmoking shape
*modfiy oox-drawingml-cs-presets
 this file is generated by presetShapeDefinitions.xml

Change-Id: I383d6b6961b546585035afd8c1a4398385a11914